Update box-shadow tokens

--- a/ui/packages/consul-ui/app/components/buttons/skin.scss
+++ b/ui/packages/consul-ui/app/components/buttons/skin.scss
@@ -17,7 +17,7 @@
   @extend %button;
   border-width: 1px;
   border-radius: var(--decor-radius-100);
-  box-shadow: var(--decor-elevation-300);
+  box-shadow: var(--token-elevation-high-box-shadow);
 }
 /* color */
 %primary-button {
