--- a/ui/packages/consul-ui/app/components/radio-card/skin.scss
+++ b/ui/packages/consul-ui/app/components/radio-card/skin.scss
@@ -2,7 +2,7 @@
   border: var(--decor-border-100);
   border-radius: var(--decor-radius-100);
   border-color: var(--token-color-surface-interactive-active);
-  box-shadow: var(--decor-elevation-400);
+  box-shadow: var(--token-surface-mid-box-shadow);
   color: var(--token-color-foreground-faint);
   cursor: pointer;
 }
