--- a/ui/packages/consul-ui/app/components/card/skin.scss
+++ b/ui/packages/consul-ui/app/components/card/skin.scss
@@ -21,5 +21,5 @@
   list-style-type: none;
 }
 %card-intent {
-  box-shadow: var(--decor-elevation-400);
+  box-shadow: var(--token-surface-mid-box-shadow);
 }
