--- a/ui/packages/consul-ui/app/components/consul/server/list/index.scss
+++ b/ui/packages/consul-ui/app/components/consul/server/list/index.scss
@@ -9,6 +9,6 @@
 }
 
 %consul-server-list a:hover div {
-  box-shadow: var(--decor-elevation-800);
+  box-shadow: var(--token-elevation-overlay-box-shadow);
   --tone-border: var(--token-color-foreground-faint);
 }
