--- a/ui/packages/consul-peerings/app/components/consul/peer/form/index.scss
+++ b/ui/packages/consul-peerings/app/components/consul/peer/form/index.scss
@@ -28,9 +28,9 @@
     position: relative;
   }
   ol::before {
-    content: '';
+    content: "";
     border-left: var(--decor-border-100);
-    border-color: rgb(var(--tone-gray-300));
+    border-color: var(--token-color-palette-neutral-300);
     height: 100%;
     position: absolute;
     left: 2rem;
@@ -47,7 +47,7 @@
   li::before {
     --icon-name: icon-hexagon;
     --icon-size: icon-600;
-    content: '';
+    content: "";
     position: absolute;
     z-index: 2;
   }
@@ -57,7 +57,7 @@
     top: 0px;
     font-size: 14px;
     font-weight: var(--typo-weight-bold);
-    background-color: rgb(var(--tone-gray-000));
+    background-color: var(--token-color-palette-neutral-0);
     z-index: 1;
     text-align: center;
   }
