--- a/ui/packages/consul-ui/app/components/card/skin.scss
+++ b/ui/packages/consul-ui/app/components/card/skin.scss
@@ -5,7 +5,7 @@
 %card {
   border: var(--decor-border-100);
   border-radius: var(--decor-radius-100);
-  background-color: rgb(var(--token-color-surface-interactive) / 90%);
+  background-color: var(--token-color-surface-faint);
 }
 %card > section,
 %card > ul > li {
