--- a/ui/packages/consul-ui/app/components/topology-metrics/series/skin.scss
+++ b/ui/packages/consul-ui/app/components/topology-metrics/series/skin.scss
@@ -12,7 +12,7 @@
     background: #fff;
     border-radius: 2px;
     box-sizing: border-box;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.05), 0px 4px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--token-elevation-higher-box-shadow);
 
     .sparkline-time {
       padding: 8px 10px;
