Replace orange-500 with amber-200

--- a/ui/packages/consul-ui/app/styles/base/color/semantic-variables.scss
+++ b/ui/packages/consul-ui/app/styles/base/color/semantic-variables.scss
@@ -1,4 +1,4 @@
 :root {
   --color-info: var(--token-color-foreground-action);
-  --color-alert: var(--tone-orange-500);
+  --color-alert: var(--token-color-palette-amber-200);
 }
